# ragchat

./: .gitignore  README.md  pyproject.toml  test_config.py  test_spinner.py
src/ragchat/: __init__.py  config.py  default.env  main.py  plugin.py
src/ragchat/chat/: __init__.py  completion.py  llm_providers.py  memory.py
src/ragchat/cli/: __init__.py  commands.py  completer.py  spinner.py
src/ragchat/document/: __init__.py  epub_loader.py  loader.py  vectorstore.py
tests/: __init__.py  conftest.py  test_commands.py  test_completion.py  test_config.py  test_config_script.py  test_document_loader.py  test_integration.py  test_memory.py  test_spinner_script.py  test_vectorstore.py  test_vision_models.py
